# libRandom

./: CMakeLists.txt  README.md
docs/: Doxyfile.in
examples/: Example.c  Example.cpp
include/: Random.hpp  RandomC.h
src/: Random.cpp  RandomC.cpp
